	Fixed back-ldap massaged base free (ITS#2999)
	Fixed back-meta memory leak issues (ITS#2986)
	Fixed back-glue search abandon handling (ITS#2999)
	Fixed back-sql undefined attribute name request bug (ITS#3005)
	Fixed back-sql oracle-related issues (ITS#2641)
	Fixed back-bdb empty suffix/contextCSN bug (ITS#2970)
	Fixed libldap/slapd '=' escape in DN (ITS#3009)
	Updated ldapsearch paged results handling
	Added total operation count in back-monitor (ITS#2983)
	Added slapd ACL peername/expand styles (ITS#2907, ITS#3010)
	Added slapd ACL set logging (ITS#2949)
	Build Environment
		Fixed overlay module build issue (ITS#2978)
		Fixed libldap T_SRV portability bug (ITS#2990)
		Fixed AIX portability issues (ITS#2997,2998)
		Fixed shared library soname versioning (ITS#3016)
		  Requires changes in link practices of dependent apps
		Updated MS win32 port (ITS#2992)
	Documentation
		Fixed ldapmodrdn(1) manpage (ITS#3003)
		Updated release documents

OpenLDAP 2.2.6 Release
	Fixed slapd SASL callback handling (ITS#2926)
	Fixed slapd backglue sizelimit bug (ITS#2888)
	Fixed slapd numericStringMatch bug (ITS#2938)
	Fixed libldap maxbuf handling (ITS#2944,2956)
	Fixed libldap_r abandon msgid mutex bug 
	Fixed liblutil NS MTA MD5 passwd len bug (ITS#2899)
	Fixed slapd pcache DB init bug (ITS#2960)
	Updated libldap reference handling (ITS#2894)
	Updated slapd syncrepl support (multiple)
	Updated slapd connection deferred logging (ITS#2959)
	Updated slapd filter logging
	Updated back-ldap
	Updated back-bdb to use Btree indices instead of Hashes
		Requires recreation of indices of existing databases
	Added slapd limit groups (ITS#2967)
	Build Environment
		Fixed test021 portable echo bug (ITS#2933, ITS#2879)
		Fixed EBCDIC conversion bugs (ITS#2962)
	Documentation
		Misc. man page updates
	Contributed Software
		Added slapd passwd modules
		Updated libcldap++

OpenLDAP 2.2.5 Release
	Fixed slapd filter bug (ITS#2901)
	Fixed slapd/syncrepl shutdown bug (ITS#2910)